--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Lambda to send cloudwatch logs to papertrail",
   "main": "index.js",
   "dependencies": {
-    "winston": "",
-    "winston-papertrail": "hyrwork/winston-papertrail",
-    "dogapi": ""
+    "winston": "2.4.2",
+    "winston-papertrail": "hyrwork/winston-papertrail"
   },
   "repository": {
     "type": "git",
