--- a/ecs-to-elk/package.json
+++ b/ecs-to-elk/package.json
@@ -4,6 +4,7 @@
   "description": "Lambda to send cloudwatch logs to papertrail",
   "main": "index.js",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.11.0",
     "winston": "2.4.2",
     "winston-papertrail": "hyrwork/winston-papertrail"
   },
