--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd ecs
+    - working-dirctory: ecs
     - run: npm run build --if-present
     - run: zip -r /out/deployment.zip .
     - name: default deploy
