--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -19,12 +19,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm run build --if-present
     - run: zip -r deployment.zip .
+
     - name: default deploy
       uses: appleboy/lambda-action@master
       with:
@@ -32,7 +34,7 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_REGION }}
         function_name: test
-        zip_file: deployment.zip
+        zip_file: ./deployment.zip
         memory_size: 128
         timeout: 10
         handler: index.handler
