--- a/pt+elk/package.json
+++ b/pt+elk/package.json
@@ -4,7 +4,8 @@
   "description": "Lambda to send cloudwatch logs to papertrail",
   "main": "index.js",
   "dependencies": {
-    "@elastic/elasticsearch": "^7.11.0",
+    "@elastic/elasticsearch": "^7.13.0",
+    "strip-ansi": "^7.0.0",
     "winston": "2.4.2",
     "winston-papertrail": "hyrwork/winston-papertrail"
   },
